# Fundamental-Trading-Dashboard-V1

./: .env.example  .gitignore  Makefile
backend/: pyproject.toml  seed_vault.py
backend/analyzers/: __init__.py  ai_analyzer.py
backend/api/: app.py  cache.py  scheduler.py
backend/api/routes/: analyze.py  market.py  pairs.py
backend/core/: config.py  models.py  vault.py
backend/fetchers/: __init__.py  aggregator.py  alpha_vantage.py  base.py  boe.py  cftc.py  coingecko.py  ecb.py  fear_greed.py  fmp.py  fred.py  market_data.py
backend/scripts/: evaluate_outcomes.py  learn_from_outcomes.py
backend/static/: index.html
backend/tests/: test_models.py
backend/tests/analyzers/: test_ai_analyzer.py
backend/tests/api/: test_cache.py  test_routes_pairs.py
backend/tests/fetchers/: test_aggregator.py  test_alpha_vantage.py  test_base.py  test_boe.py  test_cftc.py  test_coingecko.py  test_ecb.py  test_fear_greed.py  test_fmp.py  test_fred.py
docs/superpowers/plans/: 2026-04-21-plan-1-foundation.md  2026-04-22-plan-2-data-fetchers.md  2026-04-22-plan-4-fastapi-dashboard.md
docs/superpowers/specs/: 2026-04-21-fundamental-bias-dashboard-design.md
vault/memory/: eur-usd.md
